<resources>
    <string name="app_name">PhotoJournal</string>
    <string name="take_pic">Take Picture</string>
    <string name="view_on_map">View On Map</string>
    <string name="view_photo_list">View Photo Table</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--String resources used for Photo Add/Upload-->
    <string name="photo_name">Name</string>
    <string name="photo_desc">Description</string>
    <string name="photo_save_button">Save</string>
</resources>